overflow problem fixed and new delete toggle

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -11,6 +11,11 @@
     text-align: center;
     color: rgb(65, 62, 62);
     box-shadow: 15px 15px 5px #ccc;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
 }
 
 .container div{
